--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:d67a00941a6326a522f811b0c0d191bbf7c51b6cd636578dbdcdb24958ef1a69"
+  "signature": "sha256:6c5a9320196579127ac053acb0bc108527761a57d335bc347072ce1027c40ca0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -626,11 +626,14 @@
       "* The dual problem is much easier to solve \n",
       "  * the gradient is analytical, suitable for gradient descent\n",
       "* A solution is guaranteed to exist if $W$ is diagonal and positive\n",
-      "* Once we find the optimal $\\bs u^*$ that minimizes the dual objective:\n",
+      "\n",
+      "Once we find the optimal $\\bs u^*$ that minimizes the dual objective:\n",
       "\n",
       "$$\n",
-      "\\bs p^* = \\frac{\\bs q \\cdot \\exp(- A^T \\bs u^*)}{\\bs q^T \\exp(- A^T \\bs u^*)}\n",
-      "$$"
+      "\\bs p^* = \\frac{\\bs q \\odot \\exp(- A^T \\bs u^*)}{\\bs q^T \\exp(- A^T \\bs u^*)}\n",
+      "$$\n",
+      "\n",
+      "* $\\odot$ is element wise multiplication"
      ]
     },
     {
