credit to Yishen

--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:6c5a9320196579127ac053acb0bc108527761a57d335bc347072ce1027c40ca0"
+  "signature": "sha256:d755af37a0f4f9e0604d94ea8a1fd74aede149335d14b689155fb4b5c3100825"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2066,7 +2066,7 @@
       "$$\n",
       "\n",
       "* $\\bs u$ is the allocation per unit notional of instruments\n",
-      "* the allocation to individual trades in the i-th unit are $\\bs u \\odot \\bs w_i$, where $\\odot$ is element-wise multiplication\n",
+      "* the allocation to individual trades in the i-th unit are $\\bs u \\odot \\bs w_i$\n",
       "* the allocation to a portfolio is therefore $\\xi_i = \\bs u^T \\bs w_i$.\n",
       "* Associative by construction: inherited from vector summation\n",
       "\n",
