--- a/ClassPolicies.ipynb
+++ b/ClassPolicies.ipynb
@@ -61,6 +61,7 @@
     "* It is not okay to discuss specific problems and solutions of the homework with others\n",
     "* Copying other people's homework solutions will not be tolerated\n",
     "  * both parties will be punished(we can't and don't want to distinguish who copied whom)\n",
+    "* Copying from previous' year's homework solution is also considered cheating. \n",
     " \n",
     "We will actively police cheating:\n",
     "* First time cheating in homework: receive 0 for the homework, which will count towards your final score\n",
