--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -361,8 +361,8 @@
    "source": [
     "#### War is peace\n",
     " * Fight your war at the boundary so that you can have peace within\n",
-    " * Challenge your clients, customers and collaborators to limit your deliverable\n",
-    " * Clearly define a minimal set of interactions to the outside world"
+    " * Challenge your clients to reduce the scope of your deliverable\n",
+    " * Define a minimal set of interactions to the outside world"
    ]
   },
   {
@@ -374,7 +374,7 @@
    },
    "source": [
     "#### Ignorance is strength\n",
-    " * Design dumb modules that only do one thing, and only one thing\n",
+    " * Design dumb modules that only do one thing\n",
     " * Keep it simple and stupid\n",
     " * Separation of concerns, modular"
    ]
@@ -403,7 +403,7 @@
     "\n",
     "<center><img src=\"img/sun-tzu.jpg\" width=400 height=400></center>\n",
     "\n",
-    "Sun Tzu: \"the supreme art of modelling is to solve problems without coding\"\n"
+    "Sun Tzu: \"the supreme art of quant modelling is to solve problems without coding\"\n"
    ]
   },
   {
@@ -448,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -1390,7 +1390,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -1529,7 +1529,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
