--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -1019,7 +1019,7 @@
     {
      "data": {
       "text/latex": [
-       "$$ \\small\\;,\\;\\;\\;A=\\left(\\begin{matrix}a_{{11}} & A^{T}_{{21}}\\\\A_{{21}} & A_{{22}}\\end{matrix}\\right)\\;,\\;\\;\\;L=\\left(\\begin{matrix}l_{{11}} & 0\\\\L_{{21}} & L_{{22}}\\end{matrix}\\right)\\;,\\;\\;\\;L^{T}=\\left(\\begin{matrix}l_{{11}} & L^{T}_{{21}}\\\\0 & L^{T}_{{22}}\\end{matrix}\\right)$$"
+       "$$\\small A=\\left(\\begin{matrix}a_{{11}} & A^{T}_{{21}}\\\\A_{{21}} & A_{{22}}\\end{matrix}\\right)\\;,\\;\\;\\;L=\\left(\\begin{matrix}l_{{11}} & 0\\\\L_{{21}} & L_{{22}}\\end{matrix}\\right)\\;,\\;\\;\\;L^{T}=\\left(\\begin{matrix}l_{{11}} & L^{T}_{{21}}\\\\0 & L^{T}_{{22}}\\end{matrix}\\right)$$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -1037,7 +1037,8 @@
     "L = sp.Matrix([[l11, 0], [L12, L22]])\n",
     "LT = sp.Matrix([[l11, L12T], [0, L22T]])\n",
     "\n",
-    "fmt.displayMath(\"\\\\small\", fmt.joinMath('=', s_A, A), fmt.joinMath('=', s_L, L), fmt.joinMath('=', s_LT, LT))"
+    "fmt.displayMath(fmt.joinMath('=', s_A, A), fmt.joinMath('=', s_L, L), fmt.joinMath('=', s_LT, LT)\n",
+    "               , pre='\\\\small')"
    ]
   },
   {
@@ -1049,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -1057,7 +1058,7 @@
     {
      "data": {
       "text/latex": [
-       "$$ \\small\\;,\\;\\;\\;\\left(\\begin{matrix}a_{{11}} & A^{T}_{{21}}\\\\A_{{21}} & A_{{22}}\\end{matrix}\\right)=\\left(\\begin{matrix}l_{{11}}^{2} & L^{T}_{{21}} l_{{11}}\\\\L_{{21}} l_{{11}} & L_{{21}} L^{T}_{{21}} + L_{{22}} L^{T}_{{22}}\\end{matrix}\\right)$$"
+       "$$\\small \\left(\\begin{matrix}a_{{11}} & A^{T}_{{21}}\\\\A_{{21}} & A_{{22}}\\end{matrix}\\right)=\\left(\\begin{matrix}l_{{11}}^{2} & L^{T}_{{21}} l_{{11}}\\\\L_{{21}} l_{{11}} & L_{{21}} L^{T}_{{21}} + L_{{22}} L^{T}_{{22}}\\end{matrix}\\right)$$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -1068,7 +1069,7 @@
     }
    ],
    "source": [
-    "fmt.displayMath(\"\\\\small\", fmt.joinMath('=', A,  L*LT))"
+    "fmt.displayMath(fmt.joinMath('=', A,  L*LT), pre='\\\\small')"
    ]
   },
   {
@@ -1080,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -1088,7 +1089,7 @@
     {
      "data": {
       "text/latex": [
-       "$$ \\small\\;,\\;\\;\\;l_{{11}}=\\sqrt{a_{{11}}}\\;,\\;\\;\\;L_{{21}}=\\frac{A_{{21}}}{l_{{11}}}\\;,\\;\\;\\;A_{{22}} - L_{{21}} L^{T}_{{21}}=L_{{22}} L^{T}_{{22}}$$"
+       "$$\\small l_{{11}}=\\sqrt{a_{{11}}}\\;,\\;\\;\\;L_{{21}}=\\frac{A_{{21}}}{l_{{11}}}\\;,\\;\\;\\;A_{{22}} - L_{{21}} L^{T}_{{21}}=L_{{22}} L^{T}_{{22}}$$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -1099,8 +1100,8 @@
     }
    ],
    "source": [
-    "fmt.displayMath(\"\\\\small\", fmt.joinMath('=', l11, sp.sqrt(a11)), fmt.joinMath('=', L12,  A21/l11), \n",
-    "                fmt.joinMath('=', A22 - L12*L12T, L22*L22T))"
+    "fmt.displayMath(fmt.joinMath('=', l11, sp.sqrt(a11)), fmt.joinMath('=', L12,  A21/l11), \n",
+    "                fmt.joinMath('=', A22 - L12*L12T, L22*L22T), pre='\\\\small')"
    ]
   },
   {
