--- a/ClassPolicies.ipynb
+++ b/ClassPolicies.ipynb
@@ -59,6 +59,7 @@
     "\n",
     "* It is okay to discuss general theories and technical issues with your classmate\n",
     "* It is not okay to discuss specific problems and solutions of the homework with others\n",
+    "* If not sure, please ask the question in the class forum\n",
     "* Copying other people's homework solutions will not be tolerated\n",
     "  * both parties will be punished(we can't and don't want to distinguish who copied whom)\n",
     "* Copying from previous' year's homework solution is also considered cheating. \n",
