--- a/PythonSetup.ipynb
+++ b/PythonSetup.ipynb
@@ -90,7 +90,7 @@
     "\n",
     "* The required IPython version is 4.0.0 or later\n",
     "\n",
-    "The following link is a step by step tutorial of ipython notebook, you can ignore anything related to plotly, we are not going the use it in the class. But the rest, in particular matpliblib, numpy and pandas will be used throughout the class. Please following the tutorial to get yourself familiar with it\n",
+    "The following link is a step by step tutorial of ipython notebook, you can ignore anything related to plotly, we are not going the use it in the class. But the rest, in particular matpliblib, numpy and pandas will be used throughout the class. Please following the tutorial to get yourself familiar with them.\n",
     "\n",
     "https://plot.ly/python/ipython-notebook-tutorial/\n",
     "\n",
@@ -138,7 +138,7 @@
     "\n",
     "1. ```%pylab inline```: inline placement of figures, ideal for printing and presentation\n",
     "2. ```%qtconsole```: start a separate ipython qtconsole that shares the same states with the IPython notebook\n",
-    "3. ```%debug```: the latest IPython notebook version (>4.0.0) does support interactive debugger. You can do so from qtconole.\n",
+    "3. ```%pdb```: the latest IPython notebook version (>4.0.0) does support interactive debugger. You can also run it from qtconole.\n",
     "4. you can mix Latex direct with markdown text by surrounding them with \\$ or \\$\\$\n",
     "5. sympy is a useful symbolic math library, it can create complicated Latex formulae programatically (see Lecture4 as an example)"
    ]
