--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -1846,7 +1846,9 @@
     "\n",
     "$\\renewcommand{bs}{\\boldsymbol}$\n",
     "\n",
-    "* In the CDS market, we observe the quoted spread $\\bs q(t)$ in the maket, and we want to build a curve in hazard rate $\\bs h(t)$ (or equivalently, the cumulative hazard $\\bs g(t)$).\n",
+    "The objective:\n",
+    "* build a curve in hazard rate $\\bs h(t)$ that exactly reprice all observed CDS prices quoted in $\\bs q(t)$\n",
+    "* or equivalently, we could build the curve in cumulative hazard $\\bs g(t)$.\n",
     "\n",
     "Bootstrap is the standard method to build curves in quatitative finance\n",
     "* Solve the knot values one by one, using benchmark instruments in the increasing order of their maturities\n",
