--- a/PythonSetup.ipynb
+++ b/PythonSetup.ipynb
@@ -1,177 +1,4 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Python Setup\n",
-    "\n",
-    "Step by step instruction for setting up the Python environment for the class."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Class Materials\n",
-    "\n",
-    "All the class materials are available at:\n",
-    "\n",
-    "* lecture slides/homework assignments: http://yadongli.github.io/nyumath2048/\n",
-    "* IPython notebook sources: https://github.com/yadongli/nyumath2048/\n",
-    "\n",
-    "The lecture slides are all generated from the IPython notebooks sources. You can get a copy of the source by:\n",
-    "\n",
-    "* download the zip package from the source url above, or\n",
-    "* (recommended): using the git command line tool: \n",
-    "  * install git command line tool from http://git-scm.com/book/en/v2/Getting-Started-Installing-Git\n",
-    "  * clone the source code to your local folder by issue the following command, which creates a new folder of nyumath2048, and downloads all the source files from github:\n",
-    "  \n",
-    "```git clone http://github.com/yadongli/nyumath2048.git```\n",
-    "\n",
-    "  * After you git clone the source, you can get the incremental updates by:\n",
-    "  \n",
-    "```git pull```\n",
-    "\n",
-    "It is recommended for you to pull periodically as we will be publishing new materials and homeworks througout the class."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Python Installation\n",
-    "\n",
-    "**Python version 2.7.x**\n",
-    "* Python 3.x is not backward compatible\n",
-    "* either 32bit or 64bit version works \n",
-    "\n",
-    "Recommend using a Python distribution:\n",
-    "\n",
-    "* <a href=https://www.enthought.com/products/canopy/>Enthought Canopy</a>: free for students\n",
-    "* <a href=http://continuum.io/downloads>Anaconda</a>: another popular free Python distribution\n",
-    "\n",
-    "Both distributions come with necessary packages like IPython/numpy/pandas etc. \n",
-    "\n",
-    "* Enthought canopy comes with a graphical package manager\n",
-    "* Anaconda comes with command line package manager ```conda```\n",
-    "* <a href=https://pypi.python.org/pypi/pip>pip</a> can be used to install Python packages that are not part of Enthought Anaconda distribution (rarely needed)\n",
-    "* both distributions support major OSes\n",
-    "\n",
-    "Difficulties of installing Enthought Canopy has been reported on MacOS, Anaconda is recommended for MacOS.\n",
-    "\n",
-    "(Please inform us if you have succeeded with using Enthought on MacOS)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Use IPython Notebook\n",
-    "\n",
-    "\n",
-    "IPython notebook is a versatile and productive environment for scientific computing. All the lecture slides are created from IPython notebook.\n",
-    "\n",
-    "* The required IPython version is 4.0.0 or later\n",
-    "\n",
-    "The following link is a step by step tutorial of ipython notebook, you can ignore anything related to plotly, we are not going the use it in the class. But the rest, in particular matpliblib, numpy and pandas will be used throughout the class. Please following the tutorial to get yourself familiar with them.\n",
-    "\n",
-    "https://plot.ly/python/ipython-notebook-tutorial/\n",
-    "\n",
-    "The following is the official documentation of IPython, it is also worthwhile to go through:\n",
-    "\n",
-    "http://ipython.readthedocs.org/en/stable/interactive/tutorial.html\n",
-    "\n",
-    "and google is another exellent source for any Python or IPython questions. \n",
-    "\n",
-    "* IPython notebook works with newer versions of all major browsers. (IE older than version 10 does not work)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Python code/data for the class\n",
-    "\n",
-    "The python code and data are in the subfolder lib and data under your nyumath2048 folder.\n",
-    "\n",
-    "**VERY IMPORTANT:** You need to create an environment variable PYTHONPATH and add the full path to your local nyumath2048/lib folder to your PYTHONPATH.\n",
-    "\n",
-    "* this step allows python interpretor to find the python modules for the class\n",
-    "* you won't be able to run the class IPython notebook without performing this step\n",
-    "* many students have run into problems because they ignored this step last year\n",
-    "\n",
-    "If you don't know what environment variable is or how to create it in your OS, google it"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Useful IPython tips\n",
-    "\n",
-    "The combination of #2 and #3 is a very efficient way to debug your python code within IPython notebook.\n",
-    "\n",
-    "1. ```%pylab inline```: inline placement of figures, ideal for printing and presentation\n",
-    "2. ```%qtconsole```: start a separate ipython qtconsole that shares the same states with the IPython notebook\n",
-    "3. ```%pdb```: the latest IPython notebook version (>4.0.0) does support interactive debugger. You can also run it from qtconole.\n",
-    "4. you can mix Latex direct with markdown text by surrounding them with \\$ or \\$\\$\n",
-    "5. sympy is a useful symbolic math library, it can create complicated Latex formulae programatically (see Lecture4 as an example)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Online resources\n",
-    "\n",
-    "The following online Python tutorials are highly recommended.\n",
-    "\n",
-    "Python language: \n",
-    "http://www.diveintopython.net/\n",
-    "\n",
-    "Numpy: \n",
-    "http://scipy.org/Tentative_NumPy_Tutorial\n",
-    "\n",
-    "IPython: \n",
-    "http://www.youtube.com/watch?v=26wgEsg9Mcc\n",
-    "\n",
-    "Pandas: \n",
-    "http://pandas.pydata.org/pandas-docs/dev/10min.html\n",
-    "\n",
-    "and Google:\n",
-    "* you can find answers to (almost) all your python questions by googling it"
-   ]
-  }
- ],
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
@@ -190,8 +17,188 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
-  }
+  },
+  "name": "",
+  "signature": "sha256:c97a508c5713eefb88864c966f616d671e2a4845e397c6eb1915b73194ffb0c0"
  },
- "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat": 3,
+ "nbformat_minor": 0,
+ "worksheets": [
+  {
+   "cells": [
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# Python Setup\n",
+      "\n",
+      "Step by step instruction for setting up the Python environment for the class."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "## Class Materials\n",
+      "\n",
+      "All the class materials are available at:\n",
+      "\n",
+      "* lecture slides/homework assignments: http://yadongli.github.io/nyumath2048/\n",
+      "* IPython notebook sources: https://github.com/yadongli/nyumath2048/\n",
+      "\n",
+      "The lecture slides are all generated from the IPython notebooks sources. You can get a copy of the source by:\n",
+      "\n",
+      "* download the zip package from the source url above, or\n",
+      "* (recommended): using the git command line tool: \n",
+      "  * install git command line tool from http://git-scm.com/book/en/v2/Getting-Started-Installing-Git\n",
+      "  * clone the source code to your local folder by issue the following command, which creates a new folder of nyumath2048, and downloads all the source files from github:\n",
+      "  \n",
+      "```git clone http://github.com/yadongli/nyumath2048.git```\n",
+      "\n",
+      "  * After you git clone the source, you can get the incremental updates by:\n",
+      "  \n",
+      "```git pull```\n",
+      "\n",
+      "It is recommended for you to pull periodically as we will be publishing new materials and homeworks througout the class."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "## Python Installation\n",
+      "\n",
+      "**Python version 2.7.x**\n",
+      "* Python 3.x is not backward compatible\n",
+      "* either 32bit or 64bit version works \n",
+      "\n",
+      "Recommend using a Python distribution:\n",
+      "\n",
+      "* <a href=https://www.enthought.com/products/canopy/>Enthought Canopy</a>: free for students\n",
+      "* <a href=http://continuum.io/downloads>Anaconda</a>: another popular free Python distribution\n",
+      "\n",
+      "Both distributions come with necessary packages like IPython/numpy/pandas etc. \n",
+      "\n",
+      "* Enthought canopy comes with a graphical package manager\n",
+      "* Anaconda comes with command line package manager ```conda```\n",
+      "* <a href=https://pypi.python.org/pypi/pip>pip</a> can be used to install Python packages that are not part of Enthought Anaconda distribution (rarely needed)\n",
+      "* both distributions support major OSes\n",
+      "\n",
+      "Difficulties of installing Enthought Canopy has been reported on MacOS, Anaconda is recommended for MacOS.\n",
+      "\n",
+      "(Please inform us if you have succeeded with using Enthought on MacOS)."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Use IPython Notebook\n",
+      "\n",
+      "\n",
+      "IPython notebook is a versatile and productive environment for scientific computing. All the lecture slides are created from IPython notebook.\n",
+      "\n",
+      "* The required IPython version is 2.4.1 or later\n",
+      "\n",
+      "The following link is a step by step tutorial of ipython notebook, you can ignore anything related to plotly, we are not going the use it in the class. But the rest, in particular matpliblib, numpy and pandas will be used throughout the class. Please following the tutorial to get yourself familiar with them.\n",
+      "\n",
+      "https://plot.ly/python/ipython-notebook-tutorial/\n",
+      "\n",
+      "The following is the official documentation of IPython, it is also worthwhile to go through:\n",
+      "\n",
+      "http://ipython.readthedocs.org/en/stable/interactive/tutorial.html\n",
+      "\n",
+      "and google is another exellent source for any Python or IPython questions. \n",
+      "\n",
+      "* IPython notebook works with newer versions of all major browsers. (IE older than version 10 does not work)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Python code/data for the class\n",
+      "\n",
+      "The python code and data are in the subfolder lib and data under your nyumath2048 folder.\n",
+      "\n",
+      "**VERY IMPORTANT:** You need to create an environment variable PYTHONPATH and add the full path to your local nyumath2048/lib folder to your PYTHONPATH.\n",
+      "\n",
+      "* this step allows python interpretor to find the python modules for the class\n",
+      "* you won't be able to run the class IPython notebook without performing this step\n",
+      "* many students have run into problems because they ignored this step last year\n",
+      "\n",
+      "If you don't know what environment variable is or how to create it in your OS, google it"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Useful IPython tips\n",
+      "\n",
+      "The combination of #2 and #3 is a very efficient way to debug your python code within IPython notebook.\n",
+      "\n",
+      "1. ```%pylab inline```: inline placement of figures, ideal for printing and presentation\n",
+      "2. ```%qtconsole```: start a separate ipython qtconsole that shares the same states with the IPython notebook\n",
+      "3. ```%pdb```: the latest IPython notebook version (>4.0.0) does support interactive debugger. You can also run it from qtconole.\n",
+      "4. you can mix Latex direct with markdown text by surrounding them with \\$ or \\$\\$\n",
+      "5. sympy is a useful symbolic math library, it can create complicated Latex formulae programatically (see Lecture4 as an example)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "## Online resources\n",
+      "\n",
+      "The following online Python tutorials are highly recommended.\n",
+      "\n",
+      "Python language: \n",
+      "http://www.diveintopython.net/\n",
+      "\n",
+      "Numpy: \n",
+      "http://scipy.org/Tentative_NumPy_Tutorial\n",
+      "\n",
+      "IPython: \n",
+      "http://www.youtube.com/watch?v=26wgEsg9Mcc\n",
+      "\n",
+      "Pandas: \n",
+      "http://pandas.pydata.org/pandas-docs/dev/10min.html\n",
+      "\n",
+      "and Google:\n",
+      "* you can find answers to (almost) all your python questions by googling it"
+     ]
+    }
+   ],
+   "metadata": {}
+  }
+ ]
 }
