--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:5d3b19a6e5db355cadcbbece72112bfaf3389d8347dcd11eaef88bb1d63fba0e"
+  "signature": "sha256:d4d72ea7839dce3e5d5990a9d9697ddcd99f2502d61c2b20735514e601032a8b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1963,15 +1963,16 @@
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 1,
+     "cell_type": "markdown",
      "metadata": {
       "slideshow": {
        "slide_type": "slide"
       }
      },
      "source": [
-      "Norm and Condition"
+      "# Norm and Condition\n",
+      "\n",
+      "Robert Heinlein: Throughout history, poverty is the normal condition of man."
      ]
     },
     {
@@ -2638,7 +2639,6 @@
       "\n",
       "Homework:\n",
       "\n",
-      "* Bindel and Goodman: Problem 4.8\n",
       "* Complete [homework set 2](http://yadongli.github.io/nyumath2048)"
      ]
     }
