--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:d4d72ea7839dce3e5d5990a9d9697ddcd99f2502d61c2b20735514e601032a8b"
+  "signature": "sha256:f9052136f5aae413c233a2e6dde445cc0007b3dd51912ce55feecd3cd40dfea3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -41,7 +41,7 @@
       "* Review of Linear Algebra\n",
       "* Gaussian Elimination and LU Factorization\n",
       "* Cholesky decomposition\n",
-      "* Matrix calculus and Mean/Var optimization\n",
+      "* Matrix calculus\n",
       "* Norm and condition"
      ]
     },
