--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -1836,16 +1836,16 @@
       "* Solve the knot values one by one, using benchmark instruments in the increasing order of their maturities\n",
       "\n",
       "Why bootstrap?\n",
-      "* because the dependency is like:\n",
+      "* the dependency is triangular, because of non-zero coupons:\n",
       "\n",
       "\n",
-      "|  - | h(3m) | h(6m) | h(1Y) | h(2Y) | h(5Y) |\n",
+      "| |$\\;h(3m)\\;$|$\\;h(6m)\\;$|$\\;h(1Y)\\;$|$\\;h(2Y)\\;$|$\\;h(5Y)\\;$|\n",
       "|:----:|:----:| :----: | :----: | :----: | :----: | :----: |\n",
-      "| q(3m) | * | | | | | \n",
-      "| q(6m) | * | * | | | | \n",
-      "| q(1Y) | * | * | * | | | \n",
-      "| q(2Y) | * | * | * | * | | \n",
-      "| q(5Y) | * | * | * | * | * |\n"
+      "|$\\;q(3m)\\;\\;$| * | | | | | \n",
+      "|$\\;q(6m)\\;$| * | * | | | | \n",
+      "|$\\;q(1Y)\\;$| * | * | * | | | \n",
+      "|$\\;q(2Y)\\;$| * | * | * | * | | \n",
+      "|$\\;q(5Y)\\;$| * | * | * | * | * |"
      ]
     },
     {
