--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -1823,7 +1823,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
      "source": [
       "## Bootstrap\n",
       "\n",
