--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -463,7 +463,7 @@
       "\n",
       "\n",
       "<center>\n",
-      "<img src=\"img/proglang.png\" width=450 height=450>\n",
+      "<img src=\"img/proglang.png\" width=500 height=500>\n",
       "</center>\n",
       "\n",
       "When you have the opportunity, choose the more expressive language for the job."
@@ -672,7 +672,7 @@
       "\n",
       "* The vast majority of general purpose CPUs are IEEE 754 compliant\n",
       "* the OS/software situation is more complicated  \n",
-      "  * Java floating point arithmetic was not compliant with the ```strictfp``` flag (don't use it!)\n",
+      "  * Java ```strictfp``` flag is a poor choice, don't use it!\n",
       "  * Compiled language like C++ depends on the hardware's implementation."
      ]
     },
@@ -1841,7 +1841,7 @@
       "  \n",
       "The problem is ill-posed if its condition number is large.\n",
       "\n",
-      "* In practice, it is impossible to compute condition number analysis over complicated calculations:\n",
+      "* In practice, it is impossible to run condition number analysis over complicated calculations:\n",
       "* We have to rely upon monitoring and testing"
      ]
     },
@@ -1865,12 +1865,11 @@
       " * $k(f) \\rightarrow 0$ near $x = 0$, it is well-posed near $x = 0$.\n",
       "\n",
       "The numerical algorithm can be unstable even if the problem itself is well-posed.\n",
-      " * A better algorithm near $x=0$ is:\n",
-      " \n",
-      " $$f(x) = \\frac{2\\sin^2(\\frac{x}{2})}{x^2}$$\n",
+      " * A better algorithm near $x=0$ is $f(x) = \\frac{2}{x^2}\\sin^2(\\frac{x}{2})$\n",
       " \n",
       "But an ill-posed problem is always numerically unstable by definition.\n",
-      "* Direct numerical calculation always unstable at around $x = 2\\pi$"
+      "* Direct numerical calculation is always unstable at around $x = 2\\pi$\n",
+      "* But we can use approximation near $2\\pi$: $f(x) = \\frac{1}{2x^2}(x-2\\pi)^2$"
      ]
     },
     {
@@ -1891,20 +1890,17 @@
      },
      "outputs": [
       {
-       "latex": [
-        "$$2 \\sin^{2}{\\left (x \\right )}$$"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "png": "iVBORw0KGgoAAAANSUhEUgAAAE0AAAAZBAMAAACGOL5iAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAIpm7MhCriUTv3c12\nVGZoascqAAABtUlEQVQoFX2STWsTURSGnzEzmWSShhFXupBB/0BsURA3WUg2igwIirsIZiNiS0Bc\nVDALIQhudKe4iGsXBrKWxEXtJoIflOJCUBEEKSXSD6top+dO71wkM+2Bmfue57zDuefegYxoTYcZ\nNIVcP99LwQzg+fbPDJxCxba1lYKZYGojE6egN4zRBV34Jqt1bKa2m9pPNYZWrKyqBvkaXMLVm7F/\nJb5KEKuSOR0ZvwmPk3qydrin5GKSK/UEZmsGxMJ++emkEg8NvgKDMPFZZzUvRtFYZKFrfKW3Sr4I\nsd+Meoc2Offo/OuhQircAJzR1Qd3diUF2f9F6HIK+kPLXEXuM1zmx/A5VGQQvCrcD5lTvtOwLSgO\nT5rd4m74Dqa6Qo7L4629QvnOwN/YJK9iG0L6KrXHUG6IcOajQPlmJnw6Vb73WD4HqWxN+lRf7HWc\neHQ7oOyzDDcnfWqOpfKYhXiOI7db1+FjyAnV9P++boPCv9zYEvuBgEEU/YHOyvd2PWrWo2sffjek\nnQo5Z+fGwuKqyFJbgb3imSkcNipLfDVQrmSfyPm66PT2cckvXNVl88Ee9qOaf4Ed7AVol8fvefwA\nAAAASUVORK5CYII=\n",
-       "prompt_number": 26,
-       "text": [
-        "     2   \n",
-        "2\u22c5sin (x)"
+       "ename": "NameError",
+       "evalue": "name 'sp' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-1-e9a72a95e929>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msymbols\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'x, k'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreal\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0msp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msimplify\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdiff\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0msp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlimit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0msp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msimplify\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0msp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mNameError\u001b[0m: name 'sp' is not defined"
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
