--- a/syllabus.ipynb
+++ b/syllabus.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e01c488763c7d6158d5f6a6ff7bed56b755292f31d2d5517ea2ee0a5b78a7815"
+  "signature": "sha256:cad77ad03335a68ec732496904b6b7d0b0fce9a8a05f1b81c5ae6bf4d129e426"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -40,14 +40,14 @@
       " * solving linear system: Gaussian elimination, LU factorization\n",
       " * correlation and covariance matrix, Cholesky decomposition\n",
       " * matrix calculus, mean/variance portfolio optimization\n",
+      " * least square and Ridge regression\n",
       " * QR decomposition and Householder transformation\n",
       " * eigen values and eigen vectors\n",
-      " * least square and Ridge regression\n",
       " * PCA analysis and its applications in Finance\n",
       " * SVD analysis\n",
       " * Conditioning, condition number for linear systems\n",
       "3. Interpolation, curve building and root search (1.5 weeks, Yadong)\n",
-      " * Overview of 1-D root search methods: Bisection, Secant, and Brent\n",
+      " * Overview of 1-D root search methods: Bisection, Secant, Newton-Raphson and Brent\n",
       " * Types of curves and curve building in Finance\n",
       " * Piecewise linear/constant interpolation\n",
       " * Cubic spline, Tension spline\n",
