--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -1868,8 +1868,8 @@
       " * A better algorithm near $x=0$ is $f(x) = \\frac{2}{x^2}\\sin^2(\\frac{x}{2})$\n",
       " \n",
       "But an ill-posed problem is always numerically unstable by definition.\n",
-      "* Direct numerical calculation is always unstable at around $x = 2\\pi$\n",
-      "* But we can use approximation near $2\\pi$: $f(x) = \\frac{1}{2x^2}(x-2\\pi)^2$"
+      "* Direct numerical calculation is unstable around $x = 2\\pi$\n",
+      "* Does this help? $f(x) \\approx \\frac{1}{2x^2}(x-2\\pi)^2$"
      ]
     },
     {
