--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -195,7 +195,7 @@
       "\n",
       "## Grades (tentative)\n",
       "* Homework 30%\n",
-      "* Project (tentative 20%, we may cancel project and move this portion to the final)\n",
+      "* Project (tentative 20%, we may cancel project and move this portion to the homework)\n",
       "* Final 50% \n",
       "* Extra credits \n",
       " * extra credit homework problems\n",
