--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:cfc956497115b53071dd061d9efd438df1d390cdb022f558133b26d69971b363"
+  "signature": "sha256:b5f379103775692fc194b36f922b93c23f6c65b8e8a341e00a8d9302196e925a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -791,7 +791,7 @@
      "source": [
       "## Convexity\n",
       "\n",
-      "Option like instruments' prices are convex functions:\n",
+      "Option-like instruments' prices are convex functions:\n",
       "\n",
       "$$ v(s, k) = \\mathbb{E}[\\max(s - k, 0)] $$\n",
       "\n",
@@ -1806,30 +1806,6 @@
       }
      },
      "source": [
-      "## Cumulative hazard\n",
-      "\n",
-      "The cumulative hazard $g(t)$ is a suitable variable for the tension spline interpolation:\n",
-      "\n",
-      "$$g(t) = \\int_0^t h(s) ds = -\\log(p(t))$$\n",
-      "\n",
-      "* $g(t)$ is continuous and monotonic\n",
-      "* $g(0) = 0$, the boundary condition is well defined\n",
-      "* $h(t) = g'(t)$ can be discountinous when $\\lambda \\rightarrow \\infty$, this reverts to the standard method of piecewise flat hazard rate\n",
-      "* with finite $\\lambda$, hazard rate is smooth and continuous\n",
-      "\n",
-      "This argument carries over to the interest rate curve building:\n",
-      "\n",
-      "* the cumulative yield, $y(t) = -\\log(b(t))$, is a suitable variable to interpolate"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
       "## Bootstrap\n",
       "\n",
       "$\\renewcommand{bs}{\\boldsymbol}$\n",
@@ -1853,13 +1829,13 @@
       "* the dependency is triangular, because of non-zero coupons:\n",
       "\n",
       "\n",
-      "| |$\\;h(3m)\\;$|$\\;h(6m)\\;$|$\\;h(1Y)\\;$|$\\;h(2Y)\\;$|$\\;h(5Y)\\;$|\n",
+      "| |$h(3m)$|$h(6m)$|$h(1Y)$|$h(2Y)$|$h(5Y)$|\n",
       "|:----:|:----:| :----: | :----: | :----: | :----: | :----: |\n",
-      "|$\\;q(3m)\\;\\;$| * | | | | | \n",
-      "|$\\;q(6m)\\;$| * | * | | | | \n",
-      "|$\\;q(1Y)\\;$| * | * | * | | | \n",
-      "|$\\;q(2Y)\\;$| * | * | * | * | | \n",
-      "|$\\;q(5Y)\\;$| * | * | * | * | * |"
+      "|$q(3m)$| * | | | | | \n",
+      "|$q(6m)$| * | * | | | | \n",
+      "|$q(1Y)$| * | * | * | | | \n",
+      "|$q(2Y)$| * | * | * | * | | \n",
+      "|$q(5Y)$| * | * | * | * | * |"
      ]
     },
     {
@@ -1870,10 +1846,11 @@
       }
      },
      "source": [
-      "## Piecewise linear bootstrap\n",
+      "## Piecewise flat bootstrap\n",
       "\n",
-      "* The piecewise linear interpolation works well with bootstrapping, result in exact fit to the benchmark prices\n",
-      "* This is the standard approach to build CDS curves in the industry"
+      "* This is the standard approach to build CDS curves in the industry\n",
+      "* $g(t)$ is the cumulative hazard: $g(t) = \\int_0^t h(s) ds = -\\log(p(t))$\n",
+      "* Piecewise flat in hazard rate $h(t)$ is equivalent to piecewise linear in $g(t)$"
      ]
     },
     {
@@ -1918,13 +1895,31 @@
      "prompt_number": 29
     },
     {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "Pros and cons of piecewise flat bootstrap\n",
+      "\n",
+      "* All benchmark prices are exactly matched, after bootstrap with piecewise flat hazard rate.\n",
+      "* Discontinuity in hazard rate causes hedging problems, risk profiles jump over the roll dates."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "fmt.displayDF(cds_data.T, \"4g\")"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": [
       {
        "html": [
@@ -2013,6 +2008,42 @@
       }
      ],
      "prompt_number": 30
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "How to remove the discontinuity in hazard rate?\n",
+      "* apply cubic spline to hazard rate seems to be a natural idea, but does it work?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Cumulative hazard\n",
+      "\n",
+      "The cumulative hazard $g(t)$ is a suitable variable for the tension spline interpolation:\n",
+      "\n",
+      "$$g(t) = \\int_0^t h(s) ds = -\\log(p(t))$$\n",
+      "\n",
+      "* $g(t)$ is continuous and monotonic\n",
+      "* $g(0) = 0$, the boundary condition is well defined\n",
+      "* $h(t) = g'(t)$ can be discountinous when $\\lambda \\rightarrow \\infty$, this reverts to the standard method of piecewise flat hazard rate\n",
+      "* with finite $\\lambda$, hazard rate is smooth and continuous\n",
+      "\n",
+      "This argument carries over to the interest rate curve building:\n",
+      "\n",
+      "* the cumulative yield, $y(t) = -\\log(b(t))$, is a suitable variable to apply tension spline"
+     ]
     },
     {
      "cell_type": "heading",
